- Added MVC demo

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -118,6 +118,10 @@
             android:label="@string/mvp_activity_title"
             android:theme="@style/Theme.MyApp"></activity>
 
+        <activity
+            android:name=".activity.mvc.view.MVCDemoActivity"
+            android:label="@string/mvc_activity_title"
+            android:theme="@style/Theme.MyApp"></activity>
 
         <!--<activity
             android:name="com.facebook.flipper.android.diagnostics.FlipperDiagnosticActivity"
