--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.kotlindemo"
-        minSdkVersion 18
+        minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -42,6 +42,14 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha05'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
 
+    // Google Play Services
+    implementation "com.google.android.gms:play-services-gcm:$playServicesLibVersion"
+    implementation "com.google.android.gms:play-services-location:$playServicesLibVersion"
+
+    // Logging
+    implementation 'org.slf4j:slf4j-api:1.7.25'
+    implementation 'com.github.tony19:logback-android:1.1.1-12'
+
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.31'
     implementation 'org.jetbrains.kotlin:kotlin-reflect:1.3.31'
 
@@ -53,6 +61,9 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1'
 
     implementation 'com.squareup.picasso:picasso:2.71828'
+
+    //psermissions
+    implementation 'com.karumi:dexter:5.0.0'
 
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     // https://developer.android.com/jetpack/androidx/releases/room
