--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.kotlindemo">
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+    <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -13,6 +23,15 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+
+        <service
+            android:name=".activity.location.LocationUpdatesIntentService"
+            android:exported="false" />
+
+        <service
+            android:name=".activity.location.FusedLocationService"
+            android:exported="true" />
+
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/main_activity_title"
@@ -122,6 +141,12 @@
             android:name=".activity.mvc.view.MVCDemoActivity"
             android:label="@string/mvc_activity_title"
             android:theme="@style/Theme.MyApp"></activity>
+
+        <activity
+            android:name=".activity.location.LocationDemoActivity"
+            android:label="@string/location_activity_title"
+            android:theme="@style/Theme.MyApp"></activity>
+
 
         <!--<activity
             android:name="com.facebook.flipper.android.diagnostics.FlipperDiagnosticActivity"
