--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,9 @@
 
 buildscript {
 
+    ext {
+        playServicesLibVersion = '16.0.0'
+    }
     repositories {
         google()
         jcenter()
