--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: "androidx.navigation.safeargs.kotlin"
 
 android {
     compileSdkVersion 28
@@ -70,6 +71,7 @@ dependencies {
     implementation 'androidx.room:room-runtime:2.1.0-beta01'
     implementation 'androidx.room:room-ktx:2.1.0-beta01'
 //    implementation "androidx.room:room-rxjava2:$room_version"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     kapt 'androidx.room:room-compiler:2.1.0-beta01'
 
     // Lifecycle: https://developer.android.com/jetpack/androidx/releases/lifecycle
@@ -90,6 +92,10 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.5.0'
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
+
+    //navigation
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.1.0-alpha06'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.1.0-alpha06'
 
     implementation 'com.squareup.okhttp3:okhttp:4.0.0-alpha02'
     // https://mvnrepository.com/artifact/com.squareup.okhttp3/logging-interceptor
