--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,19 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.kotlindemo">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
-
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
-
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -24,22 +22,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:usesCleartextTraffic="true">
-
+        android:usesCleartextTraffic="true"
+        tools:ignore="GoogleAppIndexingWarning">
         <!-- Services -->
         <service
             android:name=".activity.location.LocationUpdatesIntentService"
             android:exported="false" />
-
         <service
             android:name=".activity.location.LocationUpdateService"
             android:exported="false" />
-
         <service
             android:name=".activity.location.FusedLocationService"
-            android:exported="true" />
-
-        <!-- BroadcastReceiver -->
+            android:exported="true" /> <!-- BroadcastReceiver -->
         <receiver
             android:name=".activity.location.LocationUpdatesBroadcastReceiver"
             android:exported="true">
@@ -58,120 +52,111 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".activity.room.NewWordActivity"
             android:label="@string/enter_word_title"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activity.room.RoomActivity"
             android:label="@string/room_activity_title"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activity.mvvm.QuotesActivity"
             android:label="@string/mvvm_activity_title"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activity.livedata.LiveDataActivity"
             android:label="@string/livedata_activity_title"
-            android:theme="@style/Theme.MyApp"></activity>
-
+            android:theme="@style/Theme.MyApp" />
         <activity
             android:name=".activity.lifecycle.LifeCycleActivity"
             android:label="@string/lifecycle_activity_title"
-            android:theme="@style/Theme.MyApp"></activity>
-
+            android:theme="@style/Theme.MyApp" />
         <activity
             android:name=".activity.viewmodel.ViewModelActivity"
             android:label="@string/viewmodel_activity_title"
-            android:theme="@style/Theme.MyApp"></activity>
-
+            android:theme="@style/Theme.MyApp" />
         <activity
             android:name=".activity.databinding.DataBindingActivity"
             android:label="@string/databinding_activity_title"
-            android:theme="@style/Theme.MyApp"></activity>
-
+            android:theme="@style/Theme.MyApp" />
         <activity
             android:name=".activity.databinding2.DataBindingActivity2"
             android:label="@string/databinding_activity_title"
-            android:theme="@style/Theme.MyApp"></activity>
-
+            android:theme="@style/Theme.MyApp" />
         <activity
             android:name=".activity.databinding2.OtherActivity"
             android:label="@string/databinding_activity_title"
-            android:theme="@style/Theme.MyApp"></activity>
-
+            android:theme="@style/Theme.MyApp" />
         <activity
             android:name=".activity.workermanager.WorkManagerActivity"
             android:label="@string/workmanager_activity_title"
-            android:theme="@style/Theme.MyApp"></activity>
-
+            android:theme="@style/Theme.MyApp" />
         <activity
             android:name=".activity.coroutines.CoroutinesActivity"
             android:label="@string/coroutine_activity_title"
-            android:theme="@style/Theme.MyApp"></activity>
-
+            android:theme="@style/Theme.MyApp" />
         <activity
             android:name=".activity.motion.MotionActivity"
             android:label="@string/motion_activity_title"
-            android:theme="@style/Theme.MyApp"></activity>
-
+            android:theme="@style/Theme.MyApp" />
         <activity
             android:name=".activity.motion.MotionByLayoutActivity"
             android:label="@string/motion_activity_title"
-            android:theme="@style/Theme.MyApp"></activity>
-
+            android:theme="@style/Theme.MyApp" />
         <activity
             android:name=".activity.motion.MotionByConstraintSetActivity"
             android:label="@string/motion_activity_title"
-            android:theme="@style/Theme.MyApp"></activity>
-
+            android:theme="@style/Theme.MyApp" />
         <activity
             android:name=".activity.motion.MotionByConstraintSetPlusCustomAttributeActivity"
             android:label="@string/motion_activity_title"
-            android:theme="@style/Theme.MyApp"></activity>
-
+            android:theme="@style/Theme.MyApp" />
         <activity
             android:name=".activity.motion.MotionByConstraintSetPlusKeyFrameActivity"
             android:label="@string/motion_activity_title"
-            android:theme="@style/Theme.MyApp"></activity>
-
+            android:theme="@style/Theme.MyApp" />
         <activity
             android:name=".activity.retrofitdemo.RetrofitDemoActivity"
             android:label="@string/retrofit_activity_title"
-            android:theme="@style/Theme.MyApp"></activity>
-
+            android:theme="@style/Theme.MyApp" />
         <activity
             android:name=".activity.retrofitdemo2.RetrofitDemoActivity"
             android:label="@string/retrofit_activity_title"
-            android:theme="@style/Theme.MyApp"></activity>
-
+            android:theme="@style/Theme.MyApp" />
         <activity
             android:name=".activity.mvp.view.MVPDemoActivity"
             android:label="@string/mvp_activity_title"
-            android:theme="@style/Theme.MyApp"></activity>
-
+            android:theme="@style/Theme.MyApp" />
         <activity
             android:name=".activity.mvc.view.MVCDemoActivity"
             android:label="@string/mvc_activity_title"
-            android:theme="@style/Theme.MyApp"></activity>
-
+            android:theme="@style/Theme.MyApp" />
         <activity
             android:name=".activity.location.LocationDemoActivity"
             android:label="@string/location_activity_title"
-            android:theme="@style/Theme.MyApp"></activity>
-
+            android:theme="@style/Theme.MyApp" />
         <activity
             android:name=".activity.inappupdates.AppUpdatesDemoActivity"
             android:label="@string/app_updates_activity_title"
-            android:theme="@style/Theme.MyApp"></activity>
+            android:theme="@style/Theme.MyApp" />
+        <activity
+            android:name=".activity.navigation.NavigationDemoActivity"
+            android:label="@string/navigation_activity_title"
+            android:theme="@style/Theme.MyApp">
+            <!-- TODO: This intent filter will be unnecessary in the future. -->
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
 
-        <!--<activity
-            android:name="com.facebook.flipper.android.diagnostics.FlipperDiagnosticActivity"
-            android:exported="true"></activity>-->
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
 
+                <data android:scheme="https" />
+                <data android:scheme="http" />
+                <data android:host="www.example.com" />
+                <data android:pathPrefix="/user/" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
