--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     implementation 'org.slf4j:slf4j-api:1.7.25'
     implementation 'com.github.tony19:logback-android:1.1.1-12'
 
+    //Kotlin complier
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.31'
     implementation 'org.jetbrains.kotlin:kotlin-reflect:1.3.31'
 
@@ -65,23 +66,26 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1'
 
+    //picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
 
-    //psermissions
+    //permissions
     implementation 'com.karumi:dexter:5.0.0'
 
+    //glide
     implementation 'com.github.bumptech.glide:glide:4.9.0'
+
     // https://developer.android.com/jetpack/androidx/releases/room
-    implementation 'androidx.room:room-runtime:2.1.0-beta01'
-    implementation 'androidx.room:room-ktx:2.1.0-beta01'
-//    implementation "androidx.room:room-rxjava2:$room_version"
+    implementation 'androidx.room:room-runtime:2.2.0-alpha01'
+    implementation 'androidx.room:room-ktx:2.2.0-alpha01'
+    implementation 'androidx.room:room-rxjava2:2.2.0-alpha01'
+    implementation  'androidx.room:room-compiler:2.2.0-alpha01'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    kapt 'androidx.room:room-compiler:2.1.0-beta01'
 
     // Lifecycle: https://developer.android.com/jetpack/androidx/releases/lifecycle
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha01'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-alpha01'
-    kapt 'androidx.lifecycle:lifecycle-compiler:2.2.0-alpha01'
+    implementation 'androidx.lifecycle:lifecycle-compiler:2.2.0-alpha01'
 
     // https://developer.android.com/jetpack/androidx/releases/work
     implementation 'androidx.work:work-runtime:2.1.0-alpha02'
@@ -92,27 +96,28 @@ dependencies {
     implementation "org.jetbrains.anko:anko-commons:0.10.8" // Dialogs
     implementation "org.jetbrains.anko:anko-design:0.10.8" // SnackBars
 
+    //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.5.0'
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
+    implementation 'com.squareup.okhttp3:okhttp:4.0.0-alpha02'
+    // https://mvnrepository.com/artifact/com.squareup.okhttp3/logging-interceptor
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.0.0-alpha02'
 
     //navigation
     implementation 'androidx.navigation:navigation-fragment-ktx:2.1.0-alpha06'
     implementation 'androidx.navigation:navigation-ui-ktx:2.1.0-alpha06'
 
-    implementation 'com.squareup.okhttp3:okhttp:4.0.0-alpha02'
-    // https://mvnrepository.com/artifact/com.squareup.okhttp3/logging-interceptor
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.0.0-alpha02'
-
-    //implementation 'com.android.support:appcompat-v7:27.1.1'
+    //parser
     implementation 'com.beust:klaxon:5.0.1'
     implementation 'com.google.code.gson:gson:2.8.5'    // GSON (older, slower)
 
-    //In-app updates
+    //In-app updates - firebase
     implementation 'com.google.firebase:firebase-config:18.0.0'
     implementation 'com.google.firebase:firebase-core:17.0.0'
 
+    //In-app updates - firebase
     // So, make sure you also include that repository in your project's build.gradle file.
     implementation 'com.google.android.play:core:1.5.0'
 
