--- a/app/build.gradle
+++ b/app/build.gradle
@@ -120,6 +120,9 @@ dependencies {
     //In-app updates - firebase
     implementation 'com.google.android.play:core:1.5.0'
 
+    //camerax
+    implementation 'androidx.camera:camera-core:1.0.0-alpha03'
+    implementation 'androidx.camera:camera-camera2:1.0.0-alpha03'
     //Flipper
     /*debugImplementation 'com.facebook.flipper:flipper:0.21.1'
     debugImplementation 'com.facebook.soloader:soloader:0.5.1'
