--- a/app/build.gradle
+++ b/app/build.gradle
@@ -123,6 +123,10 @@ dependencies {
     //camerax
     implementation 'androidx.camera:camera-core:1.0.0-alpha03'
     implementation 'androidx.camera:camera-camera2:1.0.0-alpha03'
+
+    //Shimmer effct
+    implementation 'com.facebook.shimmer:shimmer:0.1.0@aar'
+
     //Flipper
     /*debugImplementation 'com.facebook.flipper:flipper:0.21.1'
     debugImplementation 'com.facebook.soloader:soloader:0.5.1'
