--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,14 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
+
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <!-- Declare features -->
     <uses-feature android:name="android.hardware.camera" />
@@ -38,6 +41,11 @@
         <service
             android:name="com.kotlindemo.activity.otherthings.location.FusedLocationService"
             android:exported="true" />
+
+        <service
+            android:name="com.kotlindemo.activity.otherthings.location.EndlessService"
+            android:enabled="true"
+            android:exported="false"/>
 
         <service
             android:name=".activity.behavior.downloadmanager.DownloadFileService"
