--- a/app/build.gradle
+++ b/app/build.gradle
@@ -133,7 +133,10 @@ dependencies {
 
     releaseImplementation 'com.facebook.flipper:flipper-noop:0.21.1'*/
 
+    //Mokito
     testImplementation 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-core:2.19.0'
+    testImplementation 'org.mockito:mockito-inline:2.13.0'
 
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
