--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,6 @@
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -46,7 +45,8 @@
         <service
             android:name="com.kotlindemo.activity.otherthings.location.EndlessService"
             android:enabled="true"
-            android:exported="false" />
+            android:exported="false"
+            android:process=":EndlessService" />
 
         <service
             android:name=".activity.behavior.downloadmanager.DownloadFileService"
