- Added firebase remote config demo

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -205,6 +205,10 @@
             android:label="@string/auto_size_textview_activity_title"
             android:theme="@style/Theme.MyApp" />
         <activity
+            android:name="com.kotlindemo.activity.otherthings.firebaseremoteconfig.FireBaseRemoteConfigActivity"
+            android:label="@string/firebase_activity_title"
+            android:theme="@style/Theme.MyApp" />
+        <activity
             android:name="com.kotlindemo.activity.architecture.navigation.NavigationDemoActivity"
             android:label="@string/navigation_activity_title"
             android:theme="@style/Theme.MyApp">
