- Added Bounce animation which worked well now

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -133,6 +133,9 @@ dependencies {
 
     releaseImplementation 'com.facebook.flipper:flipper-noop:0.21.1'*/
 
+    //bounce animation
+    //implementation 'hari.bounceview:bounceview:0.1.0'
+
     //Mokito
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-core:2.19.0'
