--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: "androidx.navigation.safeargs.kotlin"
+apply plugin: 'com.squareup.sqldelight'
 
 android {
     compileSdkVersion 28
@@ -51,7 +52,7 @@ dependencies {
     implementation 'org.slf4j:slf4j-api:1.7.25'
     implementation 'com.github.tony19:logback-android:1.1.1-12'
 
-    //Kotlin complier
+    //Kotlin compiler
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.31'
     implementation 'org.jetbrains.kotlin:kotlin-reflect:1.3.31'
 
@@ -113,9 +114,12 @@ dependencies {
     implementation 'com.beust:klaxon:5.0.1'
     implementation 'com.google.code.gson:gson:2.8.5'    // GSON (older, slower)
 
-    //In-app updates - firebase
+    //firebase -  remote config
     implementation 'com.google.firebase:firebase-config:18.0.0'
     implementation 'com.google.firebase:firebase-core:17.0.0'
+
+    //facebook stetho
+    implementation 'com.facebook.stetho:stetho:1.5.1'
 
     //In-app updates - firebase
     implementation 'com.google.android.play:core:1.5.0'
@@ -124,8 +128,12 @@ dependencies {
     implementation 'androidx.camera:camera-core:1.0.0-alpha03'
     implementation 'androidx.camera:camera-camera2:1.0.0-alpha03'
 
-    //Shimmer effct
+    //Shimmer effect
     implementation 'com.facebook.shimmer:shimmer:0.1.0@aar'
+
+    //SQLDelight
+    implementation "com.squareup.sqldelight:android-driver:1.1.4"
+    testImplementation  "com.squareup.sqldelight:android-driver:1.1.4"
 
     //Flipper
     /*debugImplementation 'com.facebook.flipper:flipper:0.21.1'
