--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.21"
         classpath 'com.google.gms:google-services:4.2.0'
         classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.1.0-alpha06'
-
+        classpath 'com.squareup.sqldelight:gradle-plugin:1.1.4'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
