--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,9 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0'
 
+    //Boom
+    implementation 'com.github.astrit-veliu:Boom:1.0'
+
     //picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
 
