--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,5 @@ android.useAndroidX=true
 
 # When set to true, automatically migrates existing third-party libraries to use AndroidX by rewriting their binaries.
 android.enableJetifier=true
+
+org.gradle.caching=true
